--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 4. PACHAMAMA EXPERIENCE: TRA RADICI E ARTI CULINARIE
             </h2>
             <br>
-            <p class="esp-left">In provincia di Ragusa troverai solo edifici monumentali e spiagge incontaminate, ma anche cultura, arte, storia, profumi e soprattutto cibi buoni. D&#39;altronde si sa, il nostro tanto amato Sud Italia è famoso in tutto il mondo per la sua cucina. <br>
+            <p class="esp-left">In provincia di Ragusa troverai edifici monumentali e spiagge incontaminate, ma anche cultura, arte, storia, profumi e soprattutto cibi buoni. D&#39;altronde si sa, il nostro tanto amato Sud Italia è famoso in tutto il mondo per la sua cucina. <br>
                 </p>
                 <div class="container">
                     <div class="group">
@@ -215,21 +215,21 @@
                     </div>
                     <div>
             <p>
-            La <span class="bold">cucina Ragusana</span> rispecchia perfettamente l&#39;animo genuino e la forte identità locale. I<span class="bold">prodotti freschi</span> coltivati nelle terre sicule e l&#39;ampio uso delle <span class="bold">erbe aromatiche</span> che crescono spontaneamente nel territorio, esaltano i sapori e i profumi dei piatti ragusani. <br>
-            Che tu preferisca camminare tra i profumi delle piante aromatiche o usarle direttamente in cucina per prelibare il palato, noi dell&#39;<span class="bold">Hotel Pomelia</span> abbiamo pensato a te, vieni a scoprire i nostri <span class="bold">workshop</span> più venduti. 
+            La <span class="bold">cucina Ragusana</span> rispecchia perfettamente l&#39;animo genuino e la forte identità locale. I<span class="bold">prodotti freschi</span> coltivati nelle terre sicule e l&#39;ampio uso delle <span class="bold">erbe aromatiche</span>, che crescono spontaneamente nel territorio, ono gli ingredienti perfetti per esaltare sapori e profumi dei piatti ragusani. <br>
+            All'<span class="bold">Hotel Pomelia</span> potrai trovare dei <span class="bold">workshop speciali</span> per immergerti tra <span class="bold">radici</span> e <span class="bold">sapori</span>, vieni a scoprire i nostri workshop più venduti. 
             <br>
             <br>
-            Fatti travolgere dalla forza della natura con la nostra <span class="bold">"Pachamama Experience"</span>, un <span class="bold">percorso sensoriale</span> tra le 78 specie di <span class="bold">piante aromatiche e officinali</span> che crescono spontaneamente e coltiviamo con amore nel <span class="bold">nostro giardino</span>. <br>
-            Vieni a scoprirle tutte con Laura, la nostra esperta di erbe officinali, stare a <span class="bold">contatto con la natura</span> offre numerosi <span class="bold">benefici per la salute fisica e mentale</span>. Camminando tra i nostri giardini imparerai a riconoscere le piante dal loro profumo, una vera esperienza per <span class="bold">riconnetterti con la madre terra.</span> 
+            Fatti travolgere dalla forza della natura con la nostra <span class="bold">"Pachamama Experience"</span>, un <span class="bold">percorso sensoriale</span> tra le 78 specie di <span class="bold">piante aromatiche e officinali</span>che coltiviamo con amore nel <span class="bold">nostro giardino</span>. <br>
+            Vieni a scoprirle tutte con Laura, la nostra esperta di erbe officinali. Stare a <span class="bold">contatto con la natura</span> offre numerosi <span class="bold">benefici per la salute fisica e mentale</span>. Camminando tra i nostri giardini imparerai a riconoscere le piante dal loro profumo, una vera e propria <span class="bold">esperienza unica</span> per <span class="bold">riconnetterti con la madre terra.</span> 
             <br>
             <br>
-            Alla fine del percorso potrete creare una <span class="bold">box di tisane omaggio</span>, preparate i vostri sacchettini con le vostre erbe aromatiche preferite. Ricorderete le vostre vacanze Ragusane anche in pieno inverno quando assaporerete la vostra tisana Pomelia sul divano! <br>
-            Cosa stai aspettando? Prenota subito il tuo workshop per te e la tua famiglia, è adatto anche ai più piccoli. Ci teniamo a rispettare i cicli e gli equilibri della natura, per cui i <span class="bold">posti sono limitati</span>, <span class="bold">prenota in anticipo nel nostro sito web per ottenere uno sconto del 20%</span>.
+            Alla fine del percorso potrete creare una <span class="bold">box di tisane</span>, preparando i vostri sacchettini con le vostre erbe aromatiche preferite. Ricorderai la tua vacanza, anche in pieno inverno, quando assaporerai la tua tisana Pomelia sul divano! <br>
+            Cosa stai aspettando? Prenota subito il tuo workshop per te e la tua famiglia! E' pensato anche per più piccoli. Ci teniamo a rispettare i cicli e gli equilibri della natura, per cui i <span class="bold">posti sono limitati</span>. <span class="bold">Prenota in anticipo nel nostro sito web per ottenere uno sconto del 20%</span>.
             <br>
             <br>
-            La “Pachamama experience” è il nostro pacchetto più apprezzato dai nostri clienti, insieme al pacchetto <span class="bold">“Gastrunumia”</span>; il nostro <span class="bold">workshop sulla cucina siciliana</span>, potrete ritrovare le erbe aromatiche che avete conosciuto nel pomeriggio direttamente in cucina. E se non siete amanti della cucina, beh almeno venite a cena! <br><br>
+            Il nostro workshop “Pachamama experience” è il più apprezzato dai nostri clienti, insieme al workshop <span class="bold">“Gastrunumia”</span>; il nostro <span class="bold">workshop sulla cucina siciliana</span>. E se non siete amanti della cucina, beh almeno venite a cena! <br><br>
             </p>
-            <p class="tips"><span class="bold">TIPS SOSTENIBILE:  Durante il workshop, impara a conoscere e usare le erbe locali, preferendo ingredienti stagionali e a km zero anche nella tua cucina di tutti i giorni. In questo modo, sostieni i produttori locali e riduci l&#39;impronta ecologica.</span></p> <br>
+            <p class="tips"><span class="bold">TIPS SOSTENIBILE:  Durante il workshop, impara a conoscere e usare le erbe locali, preferendo ingredienti stagionali e a km zero anche nella tua cucina di tutti i giorni. In questo modo, sostieni i produttori locali e riduci gli sprechi alimentari.</span></p> <br>
                 <br>
            </div>
            </div>
