--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
     
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -239,9 +241,11 @@
 
             <h2>5. EXTRA: GLI EGIZI E I DONI DEL NILO </h2>
             <br>
+            <div class="container">
             <p>E se dovesse piovere? Non lasceremo che una giornata di <span class="bold">pioggia</span> turbi le vostre vacanze: siete fortunati! Quest&#39;estate 2025 con il supporto della Regione Sicilia, è arrivata a <span class="bold">Ragusa città</span>, la <span class="bold">mostra "Gli Egizi e i doni del Nilo"</span>, prodotta da Arthemisia in collaborazione con il Museo Egizio di Torino e curata da Paolo Marini. 
                 <br>
                 <br>
+                
             La <span class="bold">mostra</span> vuole portare alla luce <span class="bold">reperti</span> dal grande fascino, che attraverso una <span class="bold">coinvolgente narrazione</span>, vi farà comprendere appieno gli elementi fondamentali della <span class="bold">cultura egizia</span>. 
             Divertiti a sentirti un archeologo tra i reperti egizi o a immaginarti camminando tra le piramidi con i vestiti tipici della nobiltà dell&#39;epoca. 
             <br>
@@ -251,6 +255,9 @@
             <br>
             La mostra adatta a <span class="bold">grandi e piccini</span> è il piano perfetto per farti dimenticare la pioggia o di vivere nel 21esimo secolo! Tra gli elementi di spicco che offre Ragusa per un giorno di pioggia, vogliamo anche ricordare, il Duomo di San Giorgio, con la sua architettura e quadri variopinti è un vero gioiello, imperdibile anche con il sole. <br><br>
             </p>
+            <img class="sh" src="./assets/img/egizi.webp" alt="Reperto egizio">
+
+            </div>
 
             <h2>CONCLUSIONE</h2>
             <p>Che tu preferisca fare un tuffo nel passato al <span class="bold">museo</span> o in una <span class="bold">città tardo barocca</span>, oppure stare in mezzo alla <span class="bold">natura</span> impegnato in qualche attività o disteso sotto al sole in una <span class="bold">spiaggia</span> incontaminata, <span class="bold">Ragusa offre</span> tutto ciò e anche di più. <br><br>
@@ -266,10 +273,10 @@
                 <li><a href="https://www.ragusawelcome.com/it">Website Ragusa | Ragusa Welcome</a></li>
                 <li><a href="https://www.sicilytourist.com/blog/?spiaggie-meravigliose-di-sicilia--riserva-naturale-e-spiaggia-di-randello--ragusa-">Riserva Naturale di Randello | Sicilytourist</a></li>
                 <li><a href="https://castellodonnafugata.org/">Sito ufficiale il Castello Donnafugata</a></li>
-                   <li><a href="https://www.tripadvisor.it/Attraction_Review-g194872-d4471049-Reviews-Gelateria_Mastrociliegia-Ragusa_Province_of_Ragusa_Sicily.html">TripAdvisor bar Mastrociliegia</a></li>
-                      <li><a href="https://castellodonnafugata.org/">Sito ufficiale il Castello Donnafugata</a></li>
-                         <li><a href="https://castellodonnafugata.org/">Sito ufficiale il Castello Donnafugata</a></li>
-                            <li><a href="https://castellodonnafugata.org/">Sito ufficiale il Castello Donnafugata</a></li>
+                <li><a href="https://www.tripadvisor.it/Attraction_Review-g194872-d4471049-Reviews-Gelateria_Mastrociliegia-Ragusa_Province_of_Ragusa_Sicily.html">TripAdvisor bar Mastrociliegia</a></li>
+                <li><a href="https://www.cookist.it/dove-mangiare-la-granita-a-siracusa-e-ragusa/">Dove mangiare la granita a Siracusa e Ragusa</a></li>
+                <li><a href="https://it.wikipedia.org/wiki/Ragusa">Ragusa - Wikipedia</a></li>
+                <li><a href="https://pixabay.com/es/">Immagini in Pixabay</a></li>
             </ul>
         </section>
         </div>
@@ -299,15 +306,16 @@
         </aside> -->
     </main>
  <footer>
-<div>
+<div class="disclaimer">
 <h5>HOTEL POMELIA | COPYWRITING</h5>
-    <p>DISCLAIMER: This project is part of </p>
+    <p>DISCLAIMER: Questo progetto di copywriting presenta un articolo di blog realizzato per l&#39;Hotel Pomelia. <br>
+        Progetto di Arianna Pesce | Start2impact University </p>
 </div>
 <div>
 <h5>FOLLOW ME AT:</h5>
-        <a href="https://www.instagram.com/arianna_psc/?hl=it" target="_blank"><i class="bi bi-instagram"></i><p> Instagram </p></a>
-        <a href="https://www.linkedin.com/in/ariannapesce" target="_blank"><i class="bi bi-linkedin"></i><p> LinkedIn </p></a>
-        <a href="https://github.com/pescearianna" target="_blank"><i class="bi bi-github"></i><p> Github </p></a>
+        <div class="social"><a href="https://www.instagram.com/arianna_psc/?hl=it" target="_blank"><i class="bi bi-instagram"></i><p> Instagram </p></a></div>
+        <div class="social"><a href="https://www.linkedin.com/in/ariannapesce" target="_blank"><i class="bi bi-linkedin"></i><p> LinkedIn </p></a></div>
+        <div class="social"><a href="https://github.com/pescearianna" target="_blank"><i class="bi bi-github"></i><p> Github </p></a></div>
 </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
